@@ -38,9 +38,10 @@ all: srczip rpm win pktriggercord_commandline.html
 cli: pktriggercord-cli
 
 MANS = pktriggercord-cli.1 pktriggercord.1
-OBJS = pslr.o pslr_enum.o pslr_scsi.o pslr_lens.o pslr_model.o pktriggercord-servermode.o
+SRCOBJNAMES = pslr pslr_enum pslr_scsi pslr_lens pslr_model pktriggercord-servermode 
+OBJS = $(SRCOBJNAMES:=.o)
 WIN_DLLS_DIR=win_dlls
-SOURCE_PACKAGE_FILES = Makefile Changelog COPYING INSTALL BUGS $(MANS) pentax.rules samsung.rules pslr_enum.h pslr_enum.c pslr_scsi.h pslr_scsi.c pslr_scsi_linux.c pslr_scsi_win.c pslr_model.h pslr_model.c pslr.h pslr.c exiftool_pentax_lens.txt pslr_lens.h pslr_lens.c pktriggercord.c pktriggercord-servermode.h pktriggercord-servermode.c pktriggercord-cli.c pktriggercord.ui $(SPECFILE) android_scsi_sg.h
+SOURCE_PACKAGE_FILES = Makefile Changelog COPYING INSTALL BUGS $(MANS) pentax.rules samsung.rules $(SRCOBJNAMES:=.h) $(SRCOBJNAMES:=.c) pslr_scsi_linux.c pslr_scsi_win.c exiftool_pentax_lens.txt pktriggercord.c pktriggercord-cli.c pktriggercord.ui $(SPECFILE) android_scsi_sg.h
 TARDIR = pktriggercord-$(VERSION)
 SRCZIP = pkTriggerCord-$(VERSION).src.tar.gz
 
@@ -154,12 +155,7 @@ pktriggercord_commandline.html: pktriggercord-cli.1
 
 # Windows cross-compile
 win: clean pktriggercord_commandline.html
-	$(WINGCC) $(WIN_CFLAGS) -c pslr_lens.c
-	$(WINGCC) $(WIN_CFLAGS) -c pslr_scsi.c
-	$(WINGCC) $(WIN_CFLAGS) -c pslr_enum.c
-	$(WINGCC) $(WIN_CFLAGS) -c pslr_model.c
-	$(WINGCC) $(WIN_CFLAGS) -c pslr.c
-	$(WINGCC) $(WIN_CFLAGS) -c pktriggercord-servermode.c
+	$(foreach srcfile, $(SRCOBJNAMES:=.c), $(WINGCC) $(WIN_CFLAGS) -c $(srcfile);)
 	$(WINGCC) -mms-bitfields -DVERSION='"$(VERSION)"'  pktriggercord-cli.c $(OBJS) -o pktriggercord-cli.exe $(WIN_CFLAGS) $(WIN_LDFLAGS) -L.
 	$(WINGCC) -mms-bitfields -DVERSION='"$(VERSION)"' -DDATADIR=\".\" pktriggercord.c $(OBJS) -o pktriggercord.exe $(WIN_GUI_CFLAGS) $(WIN_LDFLAGS) -L.
 	mkdir -p $(WINDIR)
