@@ -5,6 +5,7 @@ version 0.82.03
 	Disable muted jpeg image tone for K-x because it's not working correctly
 	Android build fixes
 	Disable jpeg hue change for old cameras without jpeg hue setting
+	Makefile code cleanup
 
 version 0.82.02 ( 2015-06-28 )
 	--pentax_debug_mode ( thx Samo Penic )
